Set Nuxt target to static for Netlify

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-GMAIL_USER=moiezdev@gmail.com
-GMAIL_PASS=tkrd nokk tsrk fidd
+NUXT_PUBLIC_GMAIL_USER=moiezdev@gmail.com
+NUXT_PUBLIC_GMAIL_PASS=tkrd nokk tsrk fidd
