--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@nuxtjs/tailwindcss": "^6.14.0",
+    "@tailwindcss/postcss": "^4.1.11",
     "@types/nodemailer": "^6.4.17",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
