--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
+    "motion-v": "^1.7.0",
     "nodemailer": "^7.0.5",
     "nuxt": "^4.0.1",
     "vue": "^3.5.18",
